syntax = "proto2";

package ums.config.proto;

option go_package = "proto/config";

message LoggerConfig {
  enum LogLevel {
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARNING = 3;
    LOG_LEVEL_ERROR = 4;
    LOG_LEVEL_FATAL = 5;
  }

  message FileWriterConfig {
    // 是否将日志写入文件
    optional bool enable = 1 [default = false];
    // 日志级别, 只写入 >= LogLevel 的日志
    optional LogLevel log_level = 2 [default = LOG_LEVEL_DEBUG];
    // Info 日志存放路径
    optional string info_log_path = 3 [default = "logs/log.info"];
    // Wf 日志存放路径 (大于 Warning 级别的日志)
    optional string wf_log_path = 4 [default = "logs/log.wf"];
    // 保存小时数, -1 表示不进行日志切割
    optional int32 retain_hours = 5 [default = 48];
  };
};
